#pragma once

public interface class ICanExecuteAware
{
	property bool CanExecute
	{
		bool get();
	}
};
